# CAFramework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/meshes/: sphere.obj.mbin
res/shaders/: basic.vs  flat.fs  normal.fs  texture.fs
src/: main.cpp
src/framework/: application.cpp  application.h  camera.cpp  camera.h  entity.cpp  entity.h  includes.h  utils.cpp  utils.h
src/framework/animations/: pose.cpp  pose.h  skeleton.cpp  skeleton.h
src/framework/graphics/: material.cpp  material.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h
src/framework/math/: mat4.cpp  mat4.h  math.h  quat.cpp  quat.h  transform.cpp  transform.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
